--- a/main/package.json
+++ b/main/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --mode development --inline --hot --color"
+    "start": "cross-env NODE_ENV=development webpack serve --mode development --inline --hot --color",
+    "start:multiple":"cross-env MODE=multiple webpack serve"
   },
   "dependencies": {
     "@types/jest": "^26.0.20",
