--- a/react/package.json
+++ b/react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "main",
+  "name": "react-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --mode development --inline --hot --color"
+    "start": "cross-env NODE_ENV=development webpack serve --mode development"
   },
   "dependencies": {
     "@types/jest": "^26.0.20",
@@ -29,6 +29,6 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.26.2",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   }
 }
