--- a/vue/package.json
+++ b/vue/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vue",
+  "name": "vue-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve --mode development --inline --hot --color"
+    "start": "cross-env NODE_ENV=development webpack serve --mode development"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.1",
@@ -26,6 +26,6 @@
     "vue-loader": "^16.1.2",
     "webpack": "^5.26.3",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.0.0-beta.0"
   }
 }
